# AgentShieldd

./: .env.example  .gitignore  LICENSE  MANIFEST.in  README.md  START_HERE.md  crypto_com_sdk_demo.py  execute_real_transaction.py  pyproject.toml  requirements.txt  run_all_demos.bat  run_all_demos.ps1
.github/workflows/: build.yml
agentshield/: __init__.py  __main__.py  llm_judge.py  logger.py  policy_engine.py  simulator.py
agentshield-api/: .env.example  DEPLOYMENT.md  Dockerfile  README.md  main.py  requirements.txt  start.ps1  start.sh  test_api.py
agentshield/facilitators/: __init__.py  cronos_facilitator.py  kite_facilitator.py
agentshield/integrations/: __init__.py  crypto_com_agent.py
demos/: autonomous_payment_flow.py  crypto_com_sdk_demo.py  execute_protected_transaction.py  execute_real_transaction.py  honeypot_detection.py  policy_blocking.py  security_validation_suite.py  suspicious_detection.py  validate_connection.py
examples/autonomous-portfolio-agent/: SETUP_GUIDE.md  autonomous_agent.py  demo_runner.py
examples/cronos-risk-managed-agent/: .env.example  README.md  __init__.py  quick_demo.py  safe_agent_demo.py  test_integration.py
examples/cronos-risk-managed-agent/config/: policy.yaml
examples/cronos-risk-managed-agent/x402-resource-service/: .env.example  README.md  package.json
examples/onchain-agent/: README.md  initialize_agent.py  requirements.txt
examples/onchain-agent/docs/: AGENTARC_SETUP.md  HONEYPOT_TESTING_GUIDE.md
scripts/: run_all_demos.bat  run_all_demos.ps1
tests/: test_complete_system.py  test_llm_judge.py  test_llm_patterns.py
(+1 files in other folders)
