[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentshield"
version = "0.1.0"
description = "Advanced policy enforcement layer for AI agents with 4-stage validation, transaction simulation, and security controls"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Success Nwachukwu", email = "successnwachukwu368@gmail.com"}
]
keywords = ["agent", "security", "policy", "ai", "validation", "agentkit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pyyaml>=6.0",
    "click>=8.0.0",
    "web3>=6.0.0",
    "eth-abi>=4.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
agentkit = [
    "coinbase-agentkit>=0.1.0",
    "web3>=6.0.0",
    "eth-abi>=4.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
agentshield = "agentshield.__main__:cli"

[project.urls]
Homepage = "https://github.com/Nsuccess/AgentShieldd"
Repository = "https://github.com/Nsuccess/AgentShieldd"
Issues = "https://github.com/Nsuccess/AgentShieldd/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentshield*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
